--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     <meta name="twitter:description" content=""/>
     <meta name="description" content="" />
 
-    <title>React App</title>
+    <title>Anjali Rajendran</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
