--- a/public/index.html
+++ b/public/index.html
@@ -8,18 +8,18 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <meta name="description" content="" />
+    <meta name="description" content="Anjali is a content writer. She specialised in product pitching, marketing strategies and website content management." />
     <meta property="og:site_name" content="Anjali Rajendran : Content Writer"/>
     <meta property="og:title" content="Anjali Rajendran : Content Writer"/>
     <meta property="og:url" content=""/>
     <meta property="og:type" content="website"/>
-    <meta property="og:description" content=""/>
+    <meta property="og:description" content="Anjali is a content writer. She specialised in product pitching, marketing strategies and website content management."/>
     <meta property="og:image" content=""/>
     <meta property="og:image:width" content="600"/>
     <meta property="og:image:height" content="400"/>
     <meta itemprop="name" content="Anjali Rajendran : Content Writer"/>
     <meta itemprop="url" content="website url"/>
-    <meta itemprop="description" content=""/>
+    <meta itemprop="description" content="Anjali is a content writer. She specialised in product pitching, marketing strategies and website content management."/>
     <meta itemprop="thumbnailUrl" content="img url"/>
     <link rel="image_src" href="img url" />
     <meta itemprop="image" content="img url"/>
@@ -27,8 +27,8 @@
     <meta name="twitter:image" content="img url"/>
     <meta name="twitter:url" content="website url"/>
     <meta name="twitter:card" content="summary"/>
-    <meta name="twitter:description" content=""/>
-    <meta name="description" content="" />
+    <meta name="twitter:description" content="Anjali is a content writer. She specialised in product pitching, marketing strategies and website content management."/>
+    <meta name="description" content="Anjali is a content writer. She specialised in product pitching, marketing strategies and website content management." />
 
     <title>Anjali Rajendran</title>
   </head>
