--- a/public/index.html
+++ b/public/index.html
@@ -26,13 +26,14 @@
     <link rel="image_src" href="img url" />
     <meta itemprop="image" content="img url"/>
 
+	  <meta name="twitter:site" content="@">
+    <meta name="twitter:creator" content="@">
     <meta name="twitter:title" content="Anjali Rajendran | Content Writer"/>
     <meta name="twitter:image" content="img url"/>
     <meta name="twitter:url" content="website url"/>
     <meta name="twitter:card" content="summary"/>
     <meta name="twitter:description" content="Anjali is a content writer. She specialised in product pitching, marketing strategies and website content management."/>
-    
-    <meta name="description" content="Anjali is a content writer. She specialised in product pitching, marketing strategies and website content management." />
+   
 
     <title>Anjali Rajendran</title>
   </head>
