--- a/public/index.html
+++ b/public/index.html
@@ -12,24 +12,24 @@
     
     <meta property="og:site_name" content="Anjali Rajendran | Content Writer"/>
     <meta property="og:title" content="Anjali Rajendran | Content Writer"/>
-    <meta property="og:url" content=""/>
+    <meta property="og:url" content="website url"/>
     <meta property="og:type" content="website"/>
     <meta property="og:description" content="Anjali is a content writer. She specialised in product pitching, marketing strategies and website content management."/>
-    <meta property="og:image" content=""/>
+    <meta property="og:image" content="https://lh3.googleusercontent.com/vzsXOq7yqRovfT712pekfC4G8lA0Y9gG2mSZA0eURD2oj1Yb1gydGnCaO31bH9ScCFMwCdLr0hJvpthXRdtFyjtM1nF3hdXxQI0gQJsqCZHohwo9oeKNNcKsT51qgmRahIrrqALHWvfVGsUMZWW37lZOcNOWq0qaGtE1Lb_d5n_qkw6aCYxDj0Qodtb4CFmQnnv-YpjdgI20FDaQSmTbOQ5q9k55zQnIft8gtMM8frNpekit3Utux65LRvVqy1NsS_rqfITAnIQSmd8-1pXvBor0JmOsfyWneAN3cHg-aGeQy7xz92E8kRg6DiCFZto5ibe4L9jD5HA5AOyHtkYYTCQfzbO1ql6HghUlOVGY9ybBYY4YfGPp0sV15IoUbjLi5BR0Ry0KpWAw1vrvL-eGg6hNyUJ1XfPDtyBQQaP4f2maFx4EHT6DAtDNjWfbGHAwBmSiBhIg3oNNB8dhK3TeBXhq7NNbNI8Sgr6sCFFqfdKXqpT_mueiRy1ugaPux8lP-7mnPxp83KEJHhjVja2GdcA2YJRBPhHu7K5I_ZHDe7qq3HQVvLlxEtfvfWzzMTpDrA-QrBlUXBPWbJfQ4RqhKUMbmKdaMD3P4p2EXeiV8wGMjaG3vze83nssQORqif3iZNIjlxeKoIz3yVDDpTc1WOQ3G_2fbKebmMSsDsKL9jFpY6snl4fnhJcxy9xWiRfOrfvBCu7oH3GCaBVbM8y8lRA=w540-h691-no?authuser=0"/>
     <meta property="og:image:width" content="600"/>
     <meta property="og:image:height" content="400"/>
 
     <meta itemprop="name" content="Anjali Rajendran | Content Writer"/>
     <meta itemprop="url" content="website url"/>
     <meta itemprop="description" content="Anjali is a content writer. She specialised in product pitching, marketing strategies and website content management."/>
-    <meta itemprop="thumbnailUrl" content="img url"/>
-    <link rel="image_src" href="img url" />
-    <meta itemprop="image" content="img url"/>
+    <meta itemprop="thumbnailUrl" content="https://lh3.googleusercontent.com/vzsXOq7yqRovfT712pekfC4G8lA0Y9gG2mSZA0eURD2oj1Yb1gydGnCaO31bH9ScCFMwCdLr0hJvpthXRdtFyjtM1nF3hdXxQI0gQJsqCZHohwo9oeKNNcKsT51qgmRahIrrqALHWvfVGsUMZWW37lZOcNOWq0qaGtE1Lb_d5n_qkw6aCYxDj0Qodtb4CFmQnnv-YpjdgI20FDaQSmTbOQ5q9k55zQnIft8gtMM8frNpekit3Utux65LRvVqy1NsS_rqfITAnIQSmd8-1pXvBor0JmOsfyWneAN3cHg-aGeQy7xz92E8kRg6DiCFZto5ibe4L9jD5HA5AOyHtkYYTCQfzbO1ql6HghUlOVGY9ybBYY4YfGPp0sV15IoUbjLi5BR0Ry0KpWAw1vrvL-eGg6hNyUJ1XfPDtyBQQaP4f2maFx4EHT6DAtDNjWfbGHAwBmSiBhIg3oNNB8dhK3TeBXhq7NNbNI8Sgr6sCFFqfdKXqpT_mueiRy1ugaPux8lP-7mnPxp83KEJHhjVja2GdcA2YJRBPhHu7K5I_ZHDe7qq3HQVvLlxEtfvfWzzMTpDrA-QrBlUXBPWbJfQ4RqhKUMbmKdaMD3P4p2EXeiV8wGMjaG3vze83nssQORqif3iZNIjlxeKoIz3yVDDpTc1WOQ3G_2fbKebmMSsDsKL9jFpY6snl4fnhJcxy9xWiRfOrfvBCu7oH3GCaBVbM8y8lRA=w540-h691-no?authuser=0"/>
+    <link rel="image_src" href="https://lh3.googleusercontent.com/vzsXOq7yqRovfT712pekfC4G8lA0Y9gG2mSZA0eURD2oj1Yb1gydGnCaO31bH9ScCFMwCdLr0hJvpthXRdtFyjtM1nF3hdXxQI0gQJsqCZHohwo9oeKNNcKsT51qgmRahIrrqALHWvfVGsUMZWW37lZOcNOWq0qaGtE1Lb_d5n_qkw6aCYxDj0Qodtb4CFmQnnv-YpjdgI20FDaQSmTbOQ5q9k55zQnIft8gtMM8frNpekit3Utux65LRvVqy1NsS_rqfITAnIQSmd8-1pXvBor0JmOsfyWneAN3cHg-aGeQy7xz92E8kRg6DiCFZto5ibe4L9jD5HA5AOyHtkYYTCQfzbO1ql6HghUlOVGY9ybBYY4YfGPp0sV15IoUbjLi5BR0Ry0KpWAw1vrvL-eGg6hNyUJ1XfPDtyBQQaP4f2maFx4EHT6DAtDNjWfbGHAwBmSiBhIg3oNNB8dhK3TeBXhq7NNbNI8Sgr6sCFFqfdKXqpT_mueiRy1ugaPux8lP-7mnPxp83KEJHhjVja2GdcA2YJRBPhHu7K5I_ZHDe7qq3HQVvLlxEtfvfWzzMTpDrA-QrBlUXBPWbJfQ4RqhKUMbmKdaMD3P4p2EXeiV8wGMjaG3vze83nssQORqif3iZNIjlxeKoIz3yVDDpTc1WOQ3G_2fbKebmMSsDsKL9jFpY6snl4fnhJcxy9xWiRfOrfvBCu7oH3GCaBVbM8y8lRA=w540-h691-no?authuser=0" />
+    <meta itemprop="image" content="https://lh3.googleusercontent.com/vzsXOq7yqRovfT712pekfC4G8lA0Y9gG2mSZA0eURD2oj1Yb1gydGnCaO31bH9ScCFMwCdLr0hJvpthXRdtFyjtM1nF3hdXxQI0gQJsqCZHohwo9oeKNNcKsT51qgmRahIrrqALHWvfVGsUMZWW37lZOcNOWq0qaGtE1Lb_d5n_qkw6aCYxDj0Qodtb4CFmQnnv-YpjdgI20FDaQSmTbOQ5q9k55zQnIft8gtMM8frNpekit3Utux65LRvVqy1NsS_rqfITAnIQSmd8-1pXvBor0JmOsfyWneAN3cHg-aGeQy7xz92E8kRg6DiCFZto5ibe4L9jD5HA5AOyHtkYYTCQfzbO1ql6HghUlOVGY9ybBYY4YfGPp0sV15IoUbjLi5BR0Ry0KpWAw1vrvL-eGg6hNyUJ1XfPDtyBQQaP4f2maFx4EHT6DAtDNjWfbGHAwBmSiBhIg3oNNB8dhK3TeBXhq7NNbNI8Sgr6sCFFqfdKXqpT_mueiRy1ugaPux8lP-7mnPxp83KEJHhjVja2GdcA2YJRBPhHu7K5I_ZHDe7qq3HQVvLlxEtfvfWzzMTpDrA-QrBlUXBPWbJfQ4RqhKUMbmKdaMD3P4p2EXeiV8wGMjaG3vze83nssQORqif3iZNIjlxeKoIz3yVDDpTc1WOQ3G_2fbKebmMSsDsKL9jFpY6snl4fnhJcxy9xWiRfOrfvBCu7oH3GCaBVbM8y8lRA=w540-h691-no?authuser=0"/>
 
-	  <meta name="twitter:site" content="@">
-    <meta name="twitter:creator" content="@">
+	  <meta name="twitter:site" content="@Anjaliiii10">
+    <meta name="twitter:creator" content="@Anjaliiii10">
     <meta name="twitter:title" content="Anjali Rajendran | Content Writer"/>
-    <meta name="twitter:image" content="img url"/>
+    <meta name="twitter:image" content="https://lh3.googleusercontent.com/vzsXOq7yqRovfT712pekfC4G8lA0Y9gG2mSZA0eURD2oj1Yb1gydGnCaO31bH9ScCFMwCdLr0hJvpthXRdtFyjtM1nF3hdXxQI0gQJsqCZHohwo9oeKNNcKsT51qgmRahIrrqALHWvfVGsUMZWW37lZOcNOWq0qaGtE1Lb_d5n_qkw6aCYxDj0Qodtb4CFmQnnv-YpjdgI20FDaQSmTbOQ5q9k55zQnIft8gtMM8frNpekit3Utux65LRvVqy1NsS_rqfITAnIQSmd8-1pXvBor0JmOsfyWneAN3cHg-aGeQy7xz92E8kRg6DiCFZto5ibe4L9jD5HA5AOyHtkYYTCQfzbO1ql6HghUlOVGY9ybBYY4YfGPp0sV15IoUbjLi5BR0Ry0KpWAw1vrvL-eGg6hNyUJ1XfPDtyBQQaP4f2maFx4EHT6DAtDNjWfbGHAwBmSiBhIg3oNNB8dhK3TeBXhq7NNbNI8Sgr6sCFFqfdKXqpT_mueiRy1ugaPux8lP-7mnPxp83KEJHhjVja2GdcA2YJRBPhHu7K5I_ZHDe7qq3HQVvLlxEtfvfWzzMTpDrA-QrBlUXBPWbJfQ4RqhKUMbmKdaMD3P4p2EXeiV8wGMjaG3vze83nssQORqif3iZNIjlxeKoIz3yVDDpTc1WOQ3G_2fbKebmMSsDsKL9jFpY6snl4fnhJcxy9xWiRfOrfvBCu7oH3GCaBVbM8y8lRA=w540-h691-no?authuser=0"/>
     <meta name="twitter:url" content="website url"/>
     <meta name="twitter:card" content="summary"/>
     <meta name="twitter:description" content="Anjali is a content writer. She specialised in product pitching, marketing strategies and website content management."/>
